syntax = "proto3";
package lastmile.station;
option java_package = "lastmile.station";
option java_multiple_files = true;
import "common.proto";

service StationService {
  rpc GetArea(AreaId) returns (lastmile.Area);
  rpc ListAreas(ListAreasRequest) returns (AreaList);
  rpc ListStations(ListStationsRequest) returns (AreaList);
}

message AreaId { string id = 1; }
message AreaList { repeated lastmile.Area items = 1; }
message ListAreasRequest {}
message ListStationsRequest {}